--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,13 @@ Babel==2.5.3
 cov-core==1.15.0
 coverage==4.5.1
 Django==2.0.3
+django-cors-headers==2.2.0
+django-extensions==2.0.5
 django-model-utils==3.1.1
 django-money==0.12.3
 django-phonenumber-field==2.0.0
 djangorestframework==3.7.7
+djangorestframework-jwt==1.11.0
 flake8==2.2.2
 ghp-import==0.5.5
 Jinja2==2.10
@@ -21,9 +24,11 @@ pkg-resources==0.0.0
 py==1.5.2
 py-moneyed==0.7.0
 pyflakes==1.6.0
+PyJWT==1.6.0
 pytest==2.5.2
 pytest-cov==1.6
 pytest-django==2.6
 pytz==2018.3
 PyYAML==3.12
+six==1.11.0
 watchdog==0.8.3
