--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ mkdocs==0.11.1
 pathtools==0.1.2
 pep8==1.7.1
 phonenumberslite==8.9.1
+Pillow==5.0.0
 pkg-resources==0.0.0
 py==1.5.2
 py-moneyed==0.7.0
